<resources>
    <string name="app_name">宝拍相机</string>
    <string name="not_supported">还在开发的呐……</string>
    <string name="sp_camera">拍摄</string>
    <string name="sp_mv">视频萌化</string>
    <string name="sp_edit">照片萌化</string>
    <string name="title_video_edit">主题MV</string>
    <string name="title_music_select">选择音乐</string>
    <string name="operation_mistake">请先停止录制再点击退出</string>
    <string name="effect_none">原图</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="recommend">推荐给好友</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于宝拍相机</string>
    <string name="rate_app">给宝拍评分</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="share_copy">拷贝链接</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_sms">短信分享</string>
    <string name="share_wchat">微信好友</string>
    <string name="share_wchat_timeline">微信朋友圈</string>
    <string name="share_qbb6">亲宝宝</string>
    <string name="share_2qbb6">分享到亲宝宝</string>
    <string name="str_recommend_title">这个APP帮你拍出最可爱的宝宝</string>
    <string name="str_recommend_des">宝拍相机-拍宝神器</string>
    <string name="err_can_not_launcher_sms">无法启动短信程序</string>
    <string name="str_recommend_content_sms">推荐宝拍这个超好的应用, 一个宝宝拍照神器！下载地址：%1$s</string>
    <string name="str_recommend_content_sina">宝拍相机-拍宝神器 下载地址：%1$s @宝拍相机</string>
    <string name="homepage">http://www.qbb6.com</string>
    <string name="str_sina_weibo_register_fail">新浪微博sdk注册失败，请卸装程序，再重新安装</string>
    <string name="str_sina_weibo_not_install">你还没安装新浪微博，请先安装！</string>
    <string name="str_sina_weibo_version_old">你的新浪微博版本过低，请先升级！</string>
    <string name="str_weixin_not_install">你还没安装微信，请先安装！</string>
    <string name="str_weixin_version_old">你的微信版本过低，请先升级！</string>
    <string name="str_no_conntent">分享内容不能为空，或者分享内容暂不支持</string>
    <string name="str_share_succeed">分享成功</string>
    <string name="str_share_failed">分享失败</string>
    <string name="str_cancel_share">分享取消</string>
    <string name="str_share_qbb6_not_login">请先登录亲宝宝</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="str_share_qq_not_installed">请先安装qq客户端</string>
    <string name="str_cancel_auth">认证取消</string>
    <string name="str_send">发送</string>
    <string name="error_info_file_not_found">服务器上木有这个文件</string>
    <string name="no_images">你的手机里还没有照片哟</string>
    <string name="no_videos">你的手机里还没有视频哟</string>
    <string name="select">选择</string>
    <string name="wait_scanning">请稍候…</string>
    <string name="folder_baby">宝宝重要时刻</string>
    <string name="not_enough_space">SD 卡已满.</string>
    <string name="select_photo_preview">预览</string>
    <string name="str_title_bar_rbtn_next">下一步</string>
    <string name="str_title_bar_lbtn_back">返回</string>
    <string name="select_photo">选择照片</string>
    <string name="select_record">选择视频</string>
    <string name="select_photo_format">完成(%1$d/%2$d)</string>
    <string name="import_media_select_photo_null">未选择任何图片</string>
    <string name="file_error">文件可能存在错误！</string>
    <string name="folder_camera">相机</string>
    <string name="str_sdcard_not_use">SD卡不可用</string>
    <string name="no_app">请先安装相应的软件</string>
    <string name="str_mall_goods_card_select_all">全选</string>
    <string name="str_cancel">取消</string>
    <string name="str_update_video">视频编辑器更新</string>
    <string name="str_update">更新</string>
    <string name="str_prompt">提示</string>
    <string name="str_settings_update_now">确认</string>
    <string name="str_settings_update_later">放弃</string>
    <string name="str_ok">确定</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="camera_error">相机故障</string>
    <string name="camera_exit_msg">相机打开失败，请检查权限后重试</string>
    <string name="record_error">录制视频故障</string>
    <string name="record_exit_msg">视频录制失败，请检查权限后重试</string>
    <string name="capture_error">拍摄照片失败</string>
    <string name="capture_exit_msg">内存不足，请清理后台程序后重试</string>
    <string name="record_too_short">录制失败，本段视频太短，请重新录制</string>
    <string name="error_msg_video_not_exist">亲，有点小问题！麻烦你重启宝拍试试或者到系统的权限管理或者360手机卫士等应用开启“本地/通话语音”权限哦。</string>
    <string name="sticker_page_title">贴纸</string>
    <string name="sticker_page_save">保存</string>
    <string name="page_share">分享</string>
    <string name="page_save">保存</string>
    <string name="download">下载</string>
    <string name="str_failed">失败</string>
    <string name="save_back_home">回首页</string>
    <string name="sticker_input">输入</string>
    <string name="str_photo_edit_lovely">萌化</string>
    <string name="str_photo_edit_filter">滤镜</string>
    <string name="str_photo_edit_heart">心语</string>
    <string name="str_video_edit_lovely">主题</string>
    <string name="waiting_to_clip">视频剪切中，请等待…</string>
    <string name="str_video_unsupport">暂不支持该格式的视频</string>
    <string name="trim_tip">滑动选择你要裁剪的片段</string>
    <string name="trim_length">%1$.1f秒</string>
    <string name="video_clip">裁剪视频</string>
    <string name="loading_video">正在载入视频…</string>
    <string name="str_saved_to_gallery">已保存到相册</string>
    <string name="str_share_to">分享到：</string>
    <string name="str_sure_to_giveup_change">确定要放弃更改吗？</string>
    <string name="str_sure_to_giveup_change_video">视频未保存，确认退出吗？</string>
    <string name="str_crop_is_minimum">裁剪达到最小值</string>
    <string name="str_is_saving">照片保存中</string>
    <string name="sticker_add_top_title">贴纸</string>
    <string name="up">上一步</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="edit_crop">裁剪</string>
    <string name="edit_auto_adjust">智能调光</string>
    <string name="edit_rotate">旋转</string>
    <string name="edit_reset">重置</string>
    <string name="edit_ratio">比例：</string>
    <string name="edit_ratio_free">自由</string>
    <string name="edit_ratio_1v1">1:1</string>
    <string name="edit_ratio_3v4">3:4</string>
    <string name="edit_ratio_4v3">4:3</string>
    <string name="edit_ratio_3v2">3:2</string>
    <string name="edit_ratio_2v3">2:3</string>
    <string name="edit_confirm">确认裁剪</string>
    <string name="edit_rotate_degress">旋转90°</string>
    <string name="str_title_bar_title_feekback">反馈</string>
    <string name="str_feedback_tv">您遇到的问题或者改进建议：</string>
    <string name="str_feedback_et_hint">我们将为您不断改进</string>
    <string name="str_feedback_contact">您的联系方式：（手机号码、邮箱）</string>
    <string name="str_feedback_contact_hint">方便我们给您答复</string>
    <string name="str_feedback_tip">产品经理会仔细阅读您的每一条留言，非常感谢您的反馈。宝拍主题贴纸合作投稿邮箱：baopai@qbb6.com，我们期待您的作品。</string>
    <string name="error_add_new_no_des">你还没输入任何内容</string>
    <string name="waiting">请等待…</string>
    <string name="str_feedback_succeed">谢谢您的反馈，我们会仔细阅读并及时处理</string>
    <string name="err_network">网络异常，请重试</string>
    <string name="err_network_timeout">亲，网络超时，再试一下吧</string>
    <string name="err_expression_server_error">反馈内容不支持表情，请修改重试</string>
    <string name="str_cur_version">当前版本： %s</string>
    <string name="str_title_bar_title_disclaimer1">免责信息和版权声明</string>
    <string name="str_about_copyright">Copyright ©2015 qbb6.com All rights Reserved</string>
    <string name="str_settings_update">新版本检测</string>
    <string name="str_settings_update_info_1">检查更新中，请稍候</string>
    <string name="str_settings_update_info_2">你的程序已是最新版本</string>
    <string name="loadinfo">加载中…</string>
    <string name="str_title_bar_title_disclaimer">免责信息</string>
    <string name="str_close">关闭</string>
    <string name="no_mh">无</string>
    <string name="no_music">无音乐</string>
    <string name="nature_mh">自然</string>
    <string name="err_take_photo_max">最多支持9张</string>
    <string name="err_only_one_photo">至少保留1张</string>
    <string name="err_sdcard_full">您的存储卡已满，请删除一些内容后再尝试拍摄</string>
    <string name="err_video_not_supported">不支持这种类型的视频文件!</string>
    <string name="err_video_time_tooshort">视频文件时间不能少于5秒!</string>
    <string name="err_video_ratio_not_supported">视频比例不支持!</string>
    <string name="str_music_btn_mine">我的音乐</string>
    <string name="str_music_btn_more">下载更多</string>
    <string name="str_divide_downloaded">已下载</string>
    <string name="str_divide_own">自带音乐</string>
    <string name="capture_photo">照片</string>
    <string name="capture_video">视频</string>
    <string name="str_photo_beauty">照片优化</string>
    <string name="str_startpage_photo">照片美化</string>
    <string name="str_startpage_video">视频特效</string>
    <string name="str_startpage_camera">拍摄</string>
    <string name="str_frame">边框</string>
    <string name="str_mv">主题</string>
    <string name="str_beauty">美化</string>
    <string name="str_whitening">美白</string>
    <string name="str_smooth">光滑</string>
    <string name="str_rosy">肤色</string>
    <string name="str_remove_jaundice">去黄疸</string>
    <string name="str_one_key_beauty">一键美化</string>
    <string name="sticker_text">文字</string>
    <string name="sticker_deco">装扮</string>
    <string name="sticker_daily">日常</string>
    <string name="sticker_subject">主题</string>
    <string name="sticker_input_text">点击输入文字</string>
    <string name="str_crop_rotate">裁剪旋转</string>
    <string name="str_crop">裁剪</string>
    <string name="str_rotate">旋转</string>
    <string name="str_brightness">亮度</string>
    <string name="str_contrast">对比度</string>
    <string name="str_temperature">色温</string>
    <string name="str_saturation">饱和度</string>
    <string name="str_flip_up_down">上下翻转</string>
    <string name="str_flip_left_right">左右翻转</string>
    <string name="str_rotate_degree">旋转90度</string>
    <string name="str_music_more">更多音乐</string>
    <string name="str_music">音乐</string>
    <string name="str_music_percent">0%</string>
    <string name="str_percent_mark">%</string>
    <string name="video_saving">保存中</string>
    <string name="download_not_finished">下载还未完成</string>
    <string name="str_photo_is_downloading">图片下载中…</string>
    <string name="str_video_is_downloading">视频下载中…</string>
    <string name="str_photo_download_failed">图片下载失败，请检查网络并重试</string>
    <string name="str_sticker_library">贴纸库</string>
    <string name="str_download_latest_qbb6">"亲宝宝当前版本过低，
请下载最新版！"</string>
    <string name="str_eraser">橡皮擦</string>
    <string name="str_paint">画笔</string>
    <string name="str_mosaic_thin">细</string>
    <string name="str_mosaic_thick">粗</string>
    <string name="str_mosaic">马赛克</string>
    <string name="str_virtual">虚化</string>
    <string name="str_choose_babyinfo_birthday">选择宝宝生日</string>
    <string name="str_choose_date">选择日期</string>
    <string name="data_format">yyyy年MM月dd日 E</string>
    <string name="frame_pan_zoom_tips">可以移动和缩放哦</string>
    <string name="download_qbb6_tips">"您还没有下载安装亲宝宝或亲宝宝版本过低，
快去下载最新版本吧！"</string>
    <string name="download_qbb6_title">下载亲宝宝</string>
    <string name="max_sticker_tips">贴太多啦，请删除一些再试</string>
    <string name="str_file_not_exist">文件不存在</string>
    <string name="str_open_beauty_voice">开启美颜音效</string>
    <string name="date_picker_dialog_title">设置日期</string>
    <string name="str_babylist_item_birthday_1">今天%1$s岁生日啦</string>
    <string name="str_babylist_item_info_4">今天%1$s啦</string>
    <string name="str_babyinfo_30days">满月</string>
    <string name="str_timelinestatis_days100">100天</string>
    <string name="str_babylist_item_full_month">%d个月</string>
    <string name="str_babylist_item_info_5">出生第%d天</string>
    <string name="str_ft_birthday_item1">宝宝刚出生</string>
    <string name="str_babylist_item_info_1">%1$s个月零%2$s天</string>
    <string name="str_babylist_item_info_3">%1$s个月</string>
    <string name="str_babylist_item_info">%1$d岁零%2$d个月</string>
    <string name="str_babylist_item_info_7">%1$d岁零%2$d天</string>
    <string name="str_babylist_item_info_6">%d岁</string>
    <string name="str_year">年</string>
    <string name="str_month">月</string>
    <string name="str_day">日</string>
</resources>