<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:visibility="gone">

    <TextView
        android:id="@+id/tv_reset_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:drawablePadding="5.0dip"
        android:drawableTop="@drawable/crop_reset_ratio"
        android:gravity="center_horizontal"
        android:text="@string/edit_reset"
        android:textColor="@color/crop_ratio_textcolor_nor"/>

    <ImageView
        android:id="@+id/iv_divider_ratio"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_toRightOf="@+id/tv_reset_ratio"
        android:contentDescription="@null"
        android:src="@color/beauty_divider_color"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/iv_divider_ratio"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/crop_ratio_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/crop_ratio_free"
            android:gravity="center_horizontal"
            android:text="@string/edit_ratio_free"
            android:textColor="@color/crop_ratio_textcolor"/>

        <TextView
            android:id="@+id/crop_ratio_1v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/crop_ratio_1v1"
            android:gravity="center_horizontal"
            android:text="@string/edit_ratio_1v1"
            android:textColor="@color/crop_ratio_textcolor"/>

        <TextView
            android:id="@+id/crop_ratio_3v4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/crop_ratio_3v4"
            android:gravity="center_horizontal"
            android:text="@string/edit_ratio_3v4"
            android:textColor="@color/crop_ratio_textcolor"/>

        <TextView
            android:id="@+id/crop_ratio_4v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/crop_ratio_4v3"
            android:gravity="center_horizontal"
            android:text="@string/edit_ratio_4v3"
            android:textColor="@color/crop_ratio_textcolor"/>

        <TextView
            android:id="@+id/crop_ratio_2v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/crop_ratio_2v3"
            android:gravity="center_horizontal"
            android:text="@string/edit_ratio_2v3"
            android:textColor="@color/crop_ratio_textcolor"/>

        <TextView
            android:id="@+id/crop_ratio_3v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/crop_ratio_3v2"
            android:gravity="center_horizontal"
            android:text="@string/edit_ratio_3v2"
            android:textColor="@color/crop_ratio_textcolor"/>
    </LinearLayout>
</RelativeLayout>