<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/bg"
              android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/bao_bcamera_title_bar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20.0dip"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:singleLine="true"
                android:text="@string/str_feedback_tv"
                android:textColor="@color/setting_item_text_color"
                android:textSize="17.0sp"/>

            <ImageView
                style="@style/setting_divider_style"
                android:layout_marginTop="8.0dip"
                android:contentDescription="@string/app_name"/>

            <EditText
                android:id="@+id/et_feedback"
                style="@style/input_common_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left|top"
                android:hint="@string/str_feedback_et_hint"
                android:lines="7"
                android:paddingBottom="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingTop="10.0dip"
                android:textSize="16.0sp"/>

            <ImageView
                style="@style/setting_divider_style"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="16.0dip"
                android:singleLine="true"
                android:text="@string/str_feedback_contact"
                android:textColor="@color/setting_item_text_color"
                android:textSize="17.0sp"/>

            <ImageView
                style="@style/setting_divider_style"
                android:layout_marginTop="8.0dip"
                android:contentDescription="@string/app_name"/>

            <EditText
                android:id="@+id/et_contact"
                style="@style/input_common_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/str_feedback_contact_hint"
                android:paddingBottom="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingTop="10.0dip"
                android:singleLine="true"
                android:textSize="16.0sp"/>

            <ImageView
                style="@style/setting_divider_style"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/feedback_tips"
                style="@style/textview_alert_notify_tip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:gravity="left"
                android:lineSpacingExtra="3.0dip"
                android:text="@string/str_feedback_tip"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>