<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="@dimen/title_bar_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="#cc000000" android:ellipsize="end" android:gravity="center" android:id="@+id/title_bar_title" android:layout_width="172.0dip" android:layout_height="fill_parent" android:text="@string/video_clip" android:singleLine="true" android:layout_centerInParent="true" />
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@+id/title_bar_left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <TextView android:id="@+id/title_bar_left_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" style="@style/title_bar_button_left_bao" />
    </LinearLayout>
    <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:id="@+id/title_bar_right" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="8.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <TextView android:id="@+id/confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_title_bar_rbtn_next" style="@style/title_bar_button_right_bao" />
    </LinearLayout>
</RelativeLayout>