<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:visibility="gone">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rotate_flip_up_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/rotate_flip_up_down"
            android:gravity="center_horizontal"
            android:text="@string/str_flip_up_down"/>

        <TextView
            android:id="@+id/rotate_flip_left_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/rotate_flip_left_right"
            android:gravity="center_horizontal"
            android:text="@string/str_flip_left_right"/>

        <TextView
            android:id="@+id/rotate_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="5.0dip"
            android:drawableTop="@drawable/rotate_degree"
            android:gravity="center_horizontal"
            android:text="@string/str_rotate_degree"/>
    </LinearLayout>
</RelativeLayout>