<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/root"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/white_cover"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ccffffff"/>

    <include
        android:id="@+id/title_bar"
        layout="@layout/bcamera_title_bar"/>

    <TextView
        android:id="@+id/tv_save_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60.0dip"
        android:drawableLeft="@drawable/save_share_ok"
        android:drawablePadding="10.0dip"
        android:singleLine="true"
        android:text="@string/str_saved_to_gallery"
        android:textColor="@color/titlebar_text_color"
        android:textSize="18.0sp"/>

    <RelativeLayout
        android:id="@+id/thumbLayout"
        android:layout_width="@dimen/save_result_thumb_width"
        android:layout_height="@dimen/save_result_thumb_height"
        android:layout_below="@+id/tv_save_done"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60.0dip">

        <com.dw.bcamera.widget.RoundedImageView
            android:id="@+id/iv_thumb"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:left_bottom_corner_radius="@dimen/save_thumb_corner_radius"
            app:left_top_corner_radius="@dimen/save_thumb_corner_radius"
            app:right_bottom_corner_radius="@dimen/save_thumb_corner_radius"
            app:right_top_corner_radius="@dimen/save_thumb_corner_radius"/>

        <ImageView
            android:id="@+id/videoplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/save_result_video_icon"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80.0dip"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/share_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:text="@string/str_share_to"
            android:textColor="@color/titlebar_text_color"
            android:textSize="18.0sp"/>

        <LinearLayout
            android:id="@+id/iconLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_share_qbb6_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10.0dip"
                android:drawableTop="@drawable/ic_share_qbb6_img"
                android:gravity="center_horizontal"
                android:text="@string/share_qbb6"
                android:textColor="@color/titlebar_text_color"
                android:textSize="16.0sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_share_wchat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10.0dip"
                android:drawableTop="@drawable/ic_share_wchat"
                android:gravity="center_horizontal"
                android:text="@string/share_wchat"
                android:textColor="@color/titlebar_text_color"
                android:textSize="16.0sp"/>

            <TextView
                android:id="@+id/tv_share_wchat_timeline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10.0dip"
                android:drawableTop="@drawable/ic_share_wchat_timeline"
                android:gravity="center_horizontal"
                android:text="@string/share_wchat_timeline"
                android:textColor="@color/titlebar_text_color"
                android:textSize="16.0sp"/>

            <TextView
                android:id="@+id/tv_share_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10.0dip"
                android:drawableTop="@drawable/ic_share_qq"
                android:gravity="center_horizontal"
                android:text="@string/share_qq"
                android:textColor="@color/titlebar_text_color"
                android:textSize="16.0sp"/>

            <TextView
                android:id="@+id/tv_share_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10.0dip"
                android:drawableTop="@drawable/ic_share_sina"
                android:gravity="center_horizontal"
                android:text="@string/share_sina"
                android:textColor="@color/titlebar_text_color"
                android:textSize="16.0sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_layout_video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80.0dip"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:text="@string/str_share_to"
            android:textColor="@color/titlebar_text_color"
            android:textSize="18.0sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/iconLayout_video"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_share_qbb6_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10.0dip"
                android:drawableTop="@drawable/ic_share_qbb6_vid"
                android:gravity="center_horizontal"
                android:text="@string/share_2qbb6"
                android:textColor="@color/titlebar_text_color"
                android:textSize="16.0sp"/>
        </LinearLayout>
    </LinearLayout>

    <com.dw.bcamera.widget.ZoomImageView
        android:id="@+id/zoomIv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:background="@color/black_color"
        android:scaleType="fitCenter"
        android:visibility="gone"/>
</RelativeLayout>